--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,7 @@
 
 <head>
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   />
   <!-- CSS Files -->
   <link rel="stylesheet" href="/assets/css/animate.css" />
@@ -30,29 +29,39 @@
       </a>
       <div class="ml-auto d-flex align-items-center">
         <!-- Updated the <ul> to a <div> with class "ml-auto d-flex align-items-center" -->
+
+          
+
+         
+
+         
+
+          
+          
+
+          
         <a class="shopping-container" routerLink="/hacer-pedido">
           <div class="shopping shopping2">
             <i class="fas fa-shopping-basket"></i>
           </div>
         </a>
-        <button class="button" routerLink="/iniciar-sesion">
-          <span>Iniciar Sesion</span>
-          <svg
-            width="15"
-            height="15"
-            stroke="currentColor"
-            stroke-width="1.5"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
-              stroke-linejoin="round"
-              stroke-linecap="round"
-            ></path>
-          </svg>
+
+
+        <button class="circular-button" routerLink="/ver-pedido">
+          <i class="fas fa-list"></i>
         </button>
+      
+        <button class="Btn"    routerLink= "/">
+  
+          <div class="sign"><svg viewBox="0 0 512 512"><path d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"></path></svg></div>
+          
+          
+        </button>
+        
+        
+        
+        
+        
       </div>
     </nav>
 
