Detalles de parte del cliente

--- a/src/app/auth/formulario/formulario.component.html
+++ b/src/app/auth/formulario/formulario.component.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="">
- 
+
 </head>
 <body>
 
 <div class="container-fluid background-image-container d-flex align-items-center justify-content-center" style="height: 100vh; background-color: #f7f7f7;">
 <div class="wrapper bg-white">
-    <div class="h2 text-center">Helados WOW</div>
+    <div class="h2 text-center">WOW Gelatto</div>
     <div class="h4 text-muted text-center pt-2">Iniciar sesión</div>
   <br>
         <img src="assets/images/lex.jpg" style=" max-width: 90px; max-height: 90px;  display: block; margin: 0 auto">
-   
+
     <form [formGroup]="loginForm" class="pt-3">
         <div class="form-group py-2">
             <div class="input-field">  <input formControlName="email" type="text" placeholder="Correo" required class=""> </div>
