--- a/src/app/ver-pedido/ver-pedido.component.css
+++ b/src/app/ver-pedido/ver-pedido.component.css
@@ -183,3 +183,107 @@ th{
     cursor: pointer;
 }
 
+#restaurant-section,.info-area{background-size:cover;background-position:center}.nav-link,button.button{cursor:pointer}.fondo-blanco{color:#fff}.container{display:flex;flex-direction:column}.custom-img{width:50px;height:50px}.btn{margin:30px}.slider-container{margin:0 auto;display:flex;justify-content:center;align-items:center}.img-slider{width:100%;height:auto}.justificado{text-align:justify}.img-mas-grande{width:100%;height:5%;object-fit:cover}button.button{display:flex;align-items:center;justify-content:center;transition:.3s linear;border-radius:10px;border:1px solid #bedbf2;padding:10px 20px}button.button>svg{margin-left:5px;transition:.4s ease-in}button.button:hover>svg{font-size:1.2em;transform:translateX(6px)}button.button:hover{box-shadow:10px 10px 40px #d1d1d1;transform:translateY(-5px)}.shopping.shopping2{width:40px;height:40px;background-color:white;margin-right:10px;display:flex;align-items:center;justify-content:center;color: black;border-radius:50%;text-align:center;transition:.3s;position:relative}.common-title4 h1 span{color:#76459d}.common-title4 h2 span,.common-title4 h3{color:#eb636b}.common-title-area.padding-50 h2 span,.container .common-title-area.padding-50 h3{color:#df4a64}.info-area{background-image:url("../../assets/images/j.jpg"),url("../../assets/images/fondo3.png");background-repeat:no-repeat}#restaurant-section{position:relative;background-image:url("../../assets/images/fondo3.png");background-repeat:no-repeat;padding:20px}#restaurant-section>.row.bg-light{background-color:rgba(255,255,255,.8);padding:30px;border-radius:10px}.menu-area.home2-menu-area.padding-bottom-10:before{content:"";position:absolute;top:0;left:0;width:100%;height:100%;background-image:url("/assets/images/fondo0.jpg");background-size:cover;background-position:center;z-index:-1}.menu-area .menu-nav-wrapper .nav-link.active .single-menu-nav::after{position:absolute;content:"";width:100%;height:100%;top:0;left:0;background:#df4a64;visibility:visible;opacity:.9;z-index:-1;transition:.5s}.menu-area .menu-nav-wrapper .nav-link.active .single-menu-nav h6{color:#fff;transition:.5s}.menu-area .menu-items-wrapper hr{border:1px dashed #df4a64}.menu-area .menu-items-wrapper a.btn{text-align:center}.menu-area .menu-items-wrapper a.btn:hover{border:1px solid #df4a64;background:0 0;color:ea899a}.single-menu-nav{width:150px;height:150px;padding:25px 30px;border:1px solid #e6e6e6;border-radius:5px;position:relative;display:flex;flex-wrap:wrap;align-items:center;justify-content:center;transition:.5s;cursor:pointer}.single-menu-nav::after{position:absolute;content:"";width:100%;height:100%;top:0;left:0;visibility:hidden;opacity:0;background:#df4a64;transition:.5s}
+
+
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+  }
+
+  .circular-button {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: white;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .circular-button i {
+    font-size: 24px;
+    color: black;
+  }
+
+  .Btn {
+    --black: #000000;
+    --ch-black: #141414;
+    --eer-black: #1b1b1b;
+    --night-rider: #2e2e2e;
+    --white: #ffffff;
+    --af-white: #f3f3f3;
+    --ch-white: #e1e1e1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition-duration: .3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    background-color: var(--af-white);
+  }
+
+  .sign {
+    width: 100%;
+    transition-duration: .3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .sign svg {
+    width: 17px;
+  }
+
+  .sign svg path {
+    fill: var(--night-rider);
+  }
+
+  .text {
+    position: absolute;
+    right: 0%;
+    width: 0%;
+    opacity: 0;
+    color: var(--night-rider);
+    font-size: 1.2em;
+    font-weight: 600;
+    transition-duration: .3s;
+  }
+
+  .Btn:hover {
+    width: 125px;
+    border-radius: 5px;
+    transition-duration: .3s;
+  }
+
+  .Btn:hover .sign {
+    width: 30%;
+    transition-duration: .3s;
+    padding-left: 20px;
+  }
+
+  .Btn:hover .text {
+    opacity: 1;
+    width: 70%;
+    transition-duration: .3s;
+    padding-right: 10px;
+  }
+
+  .Btn:active {
+    transform: translate(2px ,2px);
+  }
+  
