--- a/src/app/ver-pedido/ver-pedido.component.html
+++ b/src/app/ver-pedido/ver-pedido.component.html
@@ -15,6 +15,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner&family=Luckiest+Guy&family=Marck+Script&family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
+    <!-- <link rel="stylesheet" href="/assets/css/animate.css" />
+    <link rel="stylesheet" href="/assets/css/meanmenu.min.css" />
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="/assets/css/all.min.css" />
+    <link rel="stylesheet" href="/assets/css/magnific-popup.css" />
+    <link rel="stylesheet" href="/assets/css/slick.css" />
+    <link rel="stylesheet" href="/assets/css/jquery-ui.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" /> -->
 
   </head>
     <!--
@@ -24,17 +33,23 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="z-index: 1;">
         <div class="container-fluid">
-
-          <a class="navbar-brand" href="#">WOW Gelatto</a>
+          <a class="navbar-brand" href="#Welcome">
+            <img
+              src="assets/images/logo.jpg"
+              class="custom-img d-inline-block"
+              alt=""
+            />
+            WOW Gelatto
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/home">Home</a>
               </li>
-              <li class="nav-item dropdown">
+              <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
                 </a>
@@ -44,16 +59,19 @@
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
-            <form class="d-flex" role="search">
+            <!-- <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            </form> -->
           </div>
         </div>
-
       </nav>
+      <br>
+      <br>
+      <br>
+      <br>
 
     <!--
         ////////////////////////////////////////////////
