--- a/src/app/auth/formulario/formulario.component.html
+++ b/src/app/auth/formulario/formulario.component.html
@@ -41,7 +41,7 @@
             </div>
         <div class="d-flex align-items-start">
             <div class="ml-auto"> <a href="/recuperar-contrasena" id="forgot">Olvidó su contraseña?</a> </div>
-        </div> <button (click)="login()" class="btn btn-block text-center my-3">Iniciar sesión</button>
+        </div> <button (click)="iniciarSesion()" class="btn btn-block text-center my-3">Iniciar sesión</button>
         <div class="text-center pt-3 text-muted">No es un miembro? <a href="/crear-usuario">Registrarse</a></div>
     </form>
 </div>
