--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -433,7 +433,7 @@
                   </div>
                   <div class="menu-content">
                     <h5>Fresa-Maracuya-Piña</h5>
-                    <p>recio : $7.000</p>
+                    <p>Precio : $7.000</p>
                     <span></span>
                   </div>
                 </div>
