--- a/src/app/ver-pedido/ver-pedido.component.html
+++ b/src/app/ver-pedido/ver-pedido.component.html
@@ -49,6 +49,20 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/home">Home</a>
               </li>
+              <li>
+                <a class="shopping-container" routerLink="/hacer-pedido">
+                  <div class="shopping shopping2">
+                    <i class="fas fa-shopping-basket"></i>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a class="shopping-container" routerLink="/ver-pedido">
+                  <div class="shopping shopping2">
+                    <i class="fas fa-list"></i>
+                  </div>
+                </a>
+              </li>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
