--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,6 +15,43 @@
   <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 
+<div id="button-container" class="hidden" >
+  <button class="button custom-button" id="hidden">
+    <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
+      <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+    </svg>
+    </button>
+  
+ 
+
+  <button class="button custom-button" id="facebook" (click)="redirectToFacebook()">
+    <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
+      <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+    </svg>
+    </button>
+
+  
+  
+
+  <button class="button custom-button" id="instagram" (click)="redirectToInstagram()">
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+    <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+    <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+  </svg>
+  </button>
+  
+  <button class="button custom-button" id="share">
+  <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <circle r="3" cy="5" cx="18"></circle>
+    <circle r="3" cy="12" cx="6"></circle>
+    <circle r="3" cy="19" cx="18"></circle>
+    <line y2="17.49" x2="15.42" y1="13.51" x1="8.59"></line>
+    <line y2="10.49" x2="8.59" y1="6.51" x1="15.41"></line>
+  </svg>
+  </button>
+  </div>
+
 <div div class="container mt-4 text-center">
   <div id="Welcome">
     <!---Start navigation Bar -->
