--- a/src/app/auth/recuperar-contrasena/recuperar-contrasena.component.html
+++ b/src/app/auth/recuperar-contrasena/recuperar-contrasena.component.html
@@ -27,8 +27,8 @@
                 </div>
             </div>
             
-            <div class="text-center pt-3 text-muted">¿Recuperaste tu contraseña? <a href="#">Iniciar sesión</a></div>
-            <button (click)="recuperarContrasena()" class="btn btn-block text-center my-3">Recuperar contraseña</button>
+            <div class="text-center pt-3 text-muted">¿Recibiste el codigo? <a href="/codigo-recuperacion">Ingresalo</a></div>
+            <button (click)="recuperarContrasena()" class="btn btn-block text-center my-3">Enviar codigo</button>
         </form>
         
 </div>
