Creacion del componente reportes de venta

--- a/src/app/admin-pedidos-v2/admin-pedidos-v2.component.html
+++ b/src/app/admin-pedidos-v2/admin-pedidos-v2.component.html
@@ -229,7 +229,7 @@
               <div class="cardHeader">
                   <h2>Pedidos pendientes.</h2>
                   <!-- <button class="btn btn-light" style="float: right;" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="addmodel()">Agregar</button> -->
-
+                  <button class="btn " type="button" style="margin-left: 50%;" routerLink="/reporte">Reporte de ventas</button>
               </div>
 
               <table>
